# Micro

./: Cargo.toml  README.md
crates/framelite-app/: Cargo.toml
crates/framelite-app/examples/: world_counter.rs
crates/framelite-app/src/: app.rs  lib.rs  world.rs
crates/framelite-app/tests/: world.rs
crates/framelite-audio/: Cargo.toml
crates/framelite-audio/src/: lib.rs
crates/framelite-audio/tests/: sink.rs
crates/framelite-bridge/: Cargo.toml
crates/framelite-bridge/src/: lib.rs
crates/framelite-bridge/tests/: tcp.rs
crates/framelite-bus/: Cargo.toml
crates/framelite-bus/src/: lib.rs
crates/framelite-core/: Cargo.toml
crates/framelite-core/examples/: counter.rs  echo.rs  midi.rs
crates/framelite-core/src/: lib.rs
crates/framelite-core/tests/: offload.rs  runtime.rs
crates/framelite-demo/: Cargo.toml
crates/framelite-demo/src/: main.rs  render.rs  sim.rs
crates/framelite-document/: Cargo.toml
crates/framelite-document/src/: lib.rs
crates/framelite-input/: Cargo.toml
crates/framelite-input/src/: lib.rs
crates/framelite-media/: Cargo.toml
crates/framelite-media/src/: lib.rs
crates/framelite-midi-player/: Cargo.toml
crates/framelite-midi-player/examples/: midi_doctor.rs  offline_render.rs
crates/framelite-midi-player/src/: audio.rs  effects.rs  main.rs  messages.rs  reverb.rs  router.rs  ui.rs
crates/framelite-protocol/: Cargo.toml
crates/framelite-protocol/src/: lib.rs
crates/framelite-stems/: Cargo.toml
crates/framelite-stems/src/: main.rs  messages.rs  reporter.rs  separator.rs  transcriber.rs
crates/framelite-time/: Cargo.toml
crates/framelite-time/src/: lib.rs
crates/framelite-time/tests/: clock.rs
crates/framelite-video/: Cargo.toml
crates/framelite-video/src/: lib.rs
crates/framelite-video/tests/: video_sink.rs
crates/micro-app/: Cargo.toml
crates/micro-app/examples/: world_counter.rs
crates/micro-app/src/: app.rs  lib.rs  world.rs
crates/micro-app/tests/: world.rs
crates/micro-audio/: Cargo.toml
crates/micro-audio/src/: lib.rs
crates/micro-audio/tests/: sink.rs
crates/micro-bridge/: Cargo.toml
crates/micro-bridge/src/: lib.rs
crates/micro-bridge/tests/: tcp.rs
crates/micro-bus/: Cargo.toml
crates/micro-bus/src/: ipc.rs  lib.rs  shmem.rs
crates/micro-core/: Cargo.toml
crates/micro-core/examples/: counter.rs  echo.rs  midi.rs
crates/micro-core/src/: lib.rs
crates/micro-core/tests/: offload.rs  runtime.rs
crates/micro-document/: Cargo.toml
crates/micro-document/src/: lib.rs
crates/micro-input/: Cargo.toml
crates/micro-input/src/: lib.rs
crates/micro-media/: Cargo.toml
crates/micro-media/src/: lib.rs
crates/micro-protocol/: Cargo.toml
crates/micro-protocol/src/: lib.rs
crates/micro-stems/: Cargo.toml
crates/micro-stems/src/: main.rs  reporter.rs  separator.rs  tools.rs  transcriber.rs
crates/micro-time/: Cargo.toml
crates/micro-time/src/: lib.rs
crates/micro-time/tests/: clock.rs
crates/micro-video/: Cargo.toml
crates/micro-video/src/: lib.rs
crates/micro-video/tests/: video_sink.rs
docs/: 0001-framelite-il-core-minimale-di-frame.md  0001-micro-il-core-minimale-di-frame.md
