# framelite — the minimal core of the Frame architecture.
#
# A tiny, *generic* modules+bus micro-kernel: a string-named pub/sub bus, a generic
# undoable document, and an in-process module runtime. No renderer, audio, sidecars,
# plugins or domain packs — that weight is what an app built *on top* of framelite adds.
[workspace]
resolver = "2"
members = [
    "crates/framelite-protocol",
    "crates/framelite-bus",
    "crates/framelite-document",
    "crates/framelite-core",
    "crates/framelite-app",
    "crates/framelite-media",
    "crates/framelite-time",
    "crates/framelite-bridge",
    "crates/framelite-input",
    "crates/framelite-video",
    "crates/framelite-audio",
    "crates/framelite-midi-player",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
framelite-protocol = { path = "crates/framelite-protocol" }
framelite-bus = { path = "crates/framelite-bus" }
framelite-document = { path = "crates/framelite-document" }
framelite-core = { path = "crates/framelite-core" }
framelite-app = { path = "crates/framelite-app" }
framelite-media = { path = "crates/framelite-media" }
framelite-time = { path = "crates/framelite-time" }
framelite-bridge = { path = "crates/framelite-bridge" }
framelite-input = { path = "crates/framelite-input" }
framelite-video = { path = "crates/framelite-video" }
framelite-audio = { path = "crates/framelite-audio" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
