[package]
name = "framelite-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "framelite core — the module runtime that ties the bus and document together. A Module subscribes to channels and runs on its own thread; the Runtime spawns and supervises them in-process."

[lib]
name = "framelite_core"

[dependencies]
framelite-protocol.workspace = true
framelite-bus.workspace = true
framelite-document.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
serde_json.workspace = true
