# framelite-demo — a demanding app on the full sources → world → sinks spine.
#
# An interactive 60fps particle simulation that exercises the whole framework at once:
# Clock (time) and input (sources) feed a Doc-backed world; a renderer sink rasterizes the
# world state into frames that travel the zero-copy media data plane (NOT the JSON bus) to an
# egui window; an overlay shows live bus metrics so the framework's real cost is visible.
[package]
name = "framelite-demo"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "framelite-demo"
path = "src/main.rs"

[dependencies]
framelite-app.workspace = true
framelite-core.workspace = true
framelite-bus.workspace = true
framelite-protocol.workspace = true
framelite-document.workspace = true
framelite-time.workspace = true
framelite-media.workspace = true
framelite-input.workspace = true
serde.workspace = true

eframe = "0.29" # window + egui, to upload the rendered frames and draw the overlay
