# framelite input — the source end of the dataflow: device-neutral input events and an
# InputMapper that translates them into app actions published on the bus for the world to reduce.
[package]
name = "framelite-input"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "framelite input — device-neutral input events and an InputMapper that turns them into bus actions for the world to reduce."

[lib]
name = "framelite_input"

[dependencies]
framelite-bus.workspace = true
framelite-protocol.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
