# framelite-midi-player — a real desktop app built *on top* of framelite.
#
# framelite stays pure (bus + modules + document); this crate adds the weight an app brings:
# a window (eframe/egui), a SoundFont synth (rustysynth), and audio output (cpal). The spine
# is still framelite: the UI publishes `transport` commands on the bus, an audio Module runs
# them and republishes `status` for the UI to render.
[package]
name = "framelite-midi-player"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
framelite-app = { path = "../framelite-app" }
framelite-core = { path = "../framelite-core" }
framelite-bus = { path = "../framelite-bus" }
framelite-protocol = { path = "../framelite-protocol" }
serde = { workspace = true }

eframe = "0.29"     # window + egui (immediate-mode GUI)
rfd = "0.15"        # native "open file" dialog
rustysynth = "1.3"  # SoundFont (.sf2) synthesizer + MIDI file sequencer
cpal = "0.15"       # cross-platform audio output
ureq = "2.10"       # tiny blocking HTTP client (rustls) to fetch a SoundFont on first run
midly = "0.5"       # Standard MIDI File parser (for per-MIDI-channel routing)
