# framelite-stems — MP3 → separated instrument stems → per-stem MIDI, orchestrated by framelite.
#
# framelite is the *orchestrator* here, not the DSP: the heavy lifting is done by proven ML
# tools (Demucs for source separation, Spotify's basic-pitch for transcription), run as
# subprocesses. The audio stays in files that those tools exchange on disk; the bus carries
# only paths and progress — "handles, not bytes" at the pipeline scale. The runtime's worker
# pool transcribes the stems in parallel.
[package]
name = "framelite-stems"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "framelite-stems"
path = "src/main.rs"

[dependencies]
framelite-app.workspace = true
framelite-core.workspace = true
framelite-bus.workspace = true
framelite-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
