# framelite video — the sink end of the dataflow: a FrameSink contract and a VideoSink module
# that present frames pulled from the zero-copy media data plane (never off the serializing bus).
[package]
name = "framelite-video"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "framelite video — a FrameSink contract and VideoSink module that present frames pulled from the zero-copy media data plane."

[lib]
name = "framelite_video"

[dependencies]
framelite-core.workspace = true
framelite-media.workspace = true
